# FalconEYE

./: .gitignore  FalconEye_Docs.html  README.md  SAGE_INTEGRATION.md  config.yaml  docker-compose.sage.yml  pyproject.toml
scripts/: seed_sage_knowledge.py
src/falconeye/adapters/cli/: commands.py  main.py
src/falconeye/application/commands/: index_codebase.py  review_file.py
src/falconeye/domain/models/: prompt.py
src/falconeye/domain/services/: language_detector.py  memory_service.py
src/falconeye/infrastructure/ast/: ast_analyzer.py
src/falconeye/infrastructure/config/: config_loader.py  config_models.py
src/falconeye/infrastructure/di/: container.py
src/falconeye/infrastructure/llm_providers/: mlx_adapter.py  ollama_adapter.py
src/falconeye/infrastructure/memory/: __init__.py  sage_adapter.py
src/falconeye/infrastructure/plugins/: csharp_plugin.py  plugin_registry.py
tests/: conftest.py
tests/e2e/: test_config.yaml
tests/e2e/vulnerable_sample/: vuln_app.py
tests/unit/: test_cross_project.py  test_di_container_sage.py  test_embedding_retry.py  test_feedback.py  test_large_file_handling.py  test_memory_service_port.py  test_review_file_sage_hooks.py  test_sage_adapter.py  test_sage_config.py  test_seed_sage_knowledge.py
