[project]
name = "falconeye"
version = "2.0.0"
description = "FalconEYE v2.0 - AI-powered security code review with hexagonal architecture"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
keywords = ["security", "llm", "code-review", "ollama"]
requires-python = ">=3.12.0"  # Minimum: 3.12+ | Recommended: Python 3.12
dependencies = [
    "chromadb>=1.0.13",
    "ollama>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.2",
    "rich>=14.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.8.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
falconeye = "falconeye.adapters.cli.main:main"

[project.optional-dependencies]
test = [
  "pytest>=8.4.0",
  "pytest-asyncio>=0.23.0",
  "flask>=3.0.0",
  "requests>=2.31.0"
]

lint = [
  "ruff>=0.12.1",
  "black>=25.1.0",
  "mypy>=1.16.1",
  "pre-commit>=4.2.0"
]

mlx = [
  "mlx>=0.22.0",
  "mlx-lm>=0.21.0"
]

sage = [
  "sage-agent-sdk>=6.0.0,<7.0.0",
]

ollama = [
  "ollama>=0.3.0"
]

dev = [
  "falconeye[test]",
  "falconeye[lint]",
  "falconeye[sage]"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring Ollama",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88